# PrimeNumbers

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
PrimeNumbers/: __init__.py
