[metadata]
name = PrimeNumbersDorofeichik
description = "The program calculates prime numbers in the range from 1 to N"
long_description = file: README.md
author = Dorofeichik
version = attr: PrimeNumbers.__VERSION__
license = MIT
classifiers =
    Programming Language :: Python :: 3.8

[options]
install_requires =
  requests
  importlib; python_version == "3.8"
packages = find:
include_package_data = True

[options.packages.find]
exclude = 
	venv

[options.entry_points]
console_scripts =
    PrimeNumbersDorofeichik = PrimeNumbers:main